--- a/app/views/pushup_reminders/show.html.erb
+++ b/app/views/pushup_reminders/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+    <b>User:</b>
+    <%= link_to @user.username, @user %>
+</p>
+
+<p>
   <b>Completed:</b>
   <%= @pushup_reminder.completed %>
 </p>
@@ -16,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_pushup_reminder_path(@pushup_reminder) %> |
-<%= link_to 'Back', pushup_reminders_path %>
+<%= link_to 'Edit', edit_user_pushup_reminder_path(@user, @pushup_reminder) %> |
+<%= link_to 'Back', user_pushup_reminders_path(@user) %>
