--- a/app/views/pushup_reminders/_form.html.erb
+++ b/app/views/pushup_reminders/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for([@user, @pushup_reminder]) do |f| %>
+<% resources = @user.presence ? [@user, @pushup_reminder] : @pushup_reminder %>
+<%= form_for(resources) do |f| %>
   <% if @pushup_reminder.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@pushup_reminder.errors.count, "error") %> prohibited this pushup_reminder from being saved:</h2>
@@ -23,6 +24,12 @@
     <%= f.label :when_sent %><br />
     <%= f.datetime_select :when_sent %>
   </div>
+  <% unless @user.presence %>
+  <div>
+    <%= f.label :user %>
+    <%= f.collection_select(:user_id, User.all, :id, :username, prompt: true) %>
+  </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
