--- a/app/views/pushup_reminders/new.html.erb
+++ b/app/views/pushup_reminders/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', user_pushup_reminders_path(@user) %>
+<% path = @user.presence ? user_pushup_reminders_path(@user) : pushup_reminders_path %>
+<%= link_to 'Back', path %>
